jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: media
  labels:
    app: jellyfin
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9594"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: jellyfin # This selector must match the labels on the pods
  type: LoadBalancer # Use NodePort or ClusterIP if you do not have a cloud load balancer
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
    - name: https
      protocol: TCP
      port: 8920
      targetPort: 8920
    - name: discovery-udp
      protocol: UDP
      port: 7359
      targetPort: 7359
    - name: metrics
      port: 9594
      targetPort: 9594
